page shifting + scrollbar bug fix

--- a/frontend/src/themes/styles.css
+++ b/frontend/src/themes/styles.css
@@ -12,6 +12,32 @@
 button {
 	all: unset;
 }
+html {
+	overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+    background-color: #faf9f6;
+    width: 16px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #babac0;
+    border-radius: 16px;
+    border: 4px solid #faf9f6;
+}
+
+.upPage{
+	background-color: #faf9f6;
+}
+
+body::-webkit-scrollbar-button {
+    display:none;
+}
 
 .DayNumber{
 	font-family: "Poppins";
